--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,9 +15,6 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="./sass/index.scss" />
-
-    <!-- Scripts -->
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <include src="./partials/header.html"></include>
@@ -29,5 +26,8 @@
     <include src="./partials/reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+
+    <!-- Scripts -->
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
