--- a/src/index.html
+++ b/src/index.html
@@ -29,5 +29,8 @@
     <include src="./partials/reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+  
+  
+    <script src="./index.js"></script>
   </body>
 </html>
