--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,6 @@
     <include src="./partials/footer.html"></include>
   
   
-    <script src="./index.js"></script>
+    <script src="./mob-menu.js"></script>
   </body>
 </html>
