--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
     />
 
     <!-- Slider -->
-    <link  rel="stylesheet"  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
 
     <!-- Styles -->
     <link rel="stylesheet" href="./sass/index.scss" />
@@ -30,10 +33,8 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
 
-
     <!-- Scripts -->
     <script src="./js/mob-menu.js"></script>
     <script src="./js/header-scroll.js"></script>
-
   </body>
 </html>
