--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,10 @@
   <!-- Scripts -->
   <script src="./js/mob-menu.js"></script>
   <script src="./js/header-scroll.js"></script>
-  <script src="./js/about__read-more.js"></script>
-  <script src="./js/contacts__franchise.js"></script>
-  <script src="./js/contacts__locations.js"></script>
-  <script src="./js/mob-menu__modal.js"></script>
+  <script src="./js/modals/about__read-more.js"></script>
+  <script src="./js/modals/contacts__franchise.js"></script>
+  <script src="./js/modals/contacts__locations.js"></script>
+  <script src="./js/modals/mob-menu__modal.js"></script>
 </body>
 
 </html>
