--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ice Cream Group-28</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ice Cream Group-28</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-    rel="stylesheet" />
+    <!-- Slider -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
 
-  <!-- Slider -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+    <!-- Styles -->
+    <link rel="stylesheet" href="./sass/index.scss" />
+  </head>
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="./sass/index.scss" />
-</head>
+  <body>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/about.html"></include>
+    <include src="./partials/features.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/reviews.html"></include>
+    <include src="./partials/contacts.html"></include>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/modals.html"></include>
 
-<body>
-  <include src="./partials/header.html"></include>
-  <include src="./partials/hero.html"></include>
-  <include src="./partials/products.html"></include>
-  <include src="./partials/about.html"></include>
-  <include src="./partials/features.html"></include>
-  <include src="./partials/gallery.html"></include>
-  <include src="./partials/reviews.html"></include>
-  <include src="./partials/contacts.html"></include>
-  <include src="./partials/modals.html"></include>
-  <include src="./partials/footer.html"></include>
-
-  <!-- Scripts -->
-  <script src="./js/mob-menu.js"></script>
-  <script src="./js/header-scroll.js"></script>
-  <script src="./js/modals/about__read-more.js"></script>
-  <script src="./js/modals/contacts__franchise.js"></script>
-  <script src="./js/modals/contacts__locations.js"></script>
-  <script src="./js/modals/mob-menu__modal.js"></script>
-</body>
-
+    <!-- Scripts -->
+    <script src="./js/mob-menu.js"></script>
+    <script src="./js/header-scroll.js"></script>
+    <script src="./js/modals/about__read-more.js"></script>
+    <script src="./js/modals/contacts__franchise.js"></script>
+    <script src="./js/modals/contacts__locations.js"></script>
+    <script src="./js/modals/mob-menu__modal.js"></script>
+  </body>
 </html>
