--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,12 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="./sass/index.scss" />
+
+    <!-- Animate CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
@@ -42,5 +48,6 @@
     <script src="./js/modals/contacts__franchise.js"></script>
     <script src="./js/modals/contacts__locations.js"></script>
     <script src="./js/modals/mob-menu__modal.js"></script>
+    <script src="./js/animate-button.js"></script>
   </body>
 </html>
