--- a/src/index.html
+++ b/src/index.html
@@ -70,5 +70,6 @@
     <script src="./js/modals/contacts__locations.js"></script>
     <script src="./js/modals/mob-menu__modal.js"></script>
     <script src="./js/modals/business_units_counter.js" type="module"></script>
+    <script src="./js/products-overlay.js" type="module"></script>
   </body>
 </html>
