Fixing no scroll + adds JS for nav

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     />
   </head>
 
-  <body>
+  <body class="body">
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
@@ -69,8 +69,9 @@
     <include src="./partials/modals.html"></include>
 
     <!-- Scripts -->
-    <script src="./js/mob-menu.js"></script>
-    <script src="./js/header-scroll.js"></script>
+    <script src="./js/mob-menu.js" type="module"></script>
+    <script src="./js/header-scroll.js" type="module"></script>
+    <script src="./js/header-nav.js" type="module"></script>
     <script src="./js/modals/about__read-more.js"></script>
     <script src="./js/modals/contacts__franchise.js"></script>
     <script src="./js/modals/contacts__locations.js"></script>
