--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Show the best ice cream web site ever. Made by group-28 from GoIT FullStack course on 19/07/2022. Glory to Ukraine!"
+    />
     <title>Ice Cream Group-28</title>
 
     <!-- Favicon -->
